<resources>
    <string name="app_name">AndroidWall</string>
    <string name="WiFi" translatable="false">WiFi</string>
    <string name="Cellular">Cellular</string>
    <string name="Applying">Applying Rules</string>

    <string name="VPN" translatable="false">VPN</string>
    <string name="Home">Home</string>
    <string name="Logs">Logs</string>

    <string name="Options">Options</string>
    <string name="FirewallMode">Firewall Mode</string>

    <string name="Blacklist" translatable="false">Blacklist</string>
    <string name="Whitelist" translatable="false">Whitelist</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
</resources>