<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.example.androidwall.fragments.RulesFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/fragment_logs"
        android:name="com.example.androidwall.fragments.LogsFragment"
        android:label="@string/Logs"
        tools:layout="@layout/logs_fragment" />
    <fragment
        android:id="@+id/fragment_options"
        android:name="com.example.androidwall.fragments.OptionsFragment"
        android:label="@string/Options"
        tools:layout="@layout/options_fragment" />
</navigation>