<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_app"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="AppIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_uid"
        app:layout_constraintStart_toEndOf="@id/img_app"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/img_app"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintBottom_toTopOf="@id/chk_wifi"
        android:layout_marginStart="8dp"/>

    <CheckBox
        android:id="@+id/chk_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WiFi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_app"
        app:layout_constraintEnd_toStartOf="@id/chk_cellular"
        app:layout_constraintTop_toBottomOf="@id/txt_uid" />

    <CheckBox
        android:id="@+id/chk_cellular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cellular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/chk_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_uid" />

    <CheckBox
        android:id="@+id/chk_vpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VPN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/chk_cellular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_uid" />

</androidx.constraintlayout.widget.ConstraintLayout>